<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/top_titile_style" >

        <Button
            android:id="@+id/backMain"
            style="@style/top_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/back_arrow_white"
            android:drawablePadding="3dp"
            android:text="@string/app_back" />

        <TextView
            android:id="@+id/title"
            style="@style/top_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_regist" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="@color/title_text"
            android:textSize="@dimen/subhead_text_size"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dis_20"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <View style="@style/view_hor_match_line" />

            <LinearLayout style="@style/lay_ct_input"
                android:visibility="gone">

                <TextView
                    style="@style/lay_ct_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/regit_account_type" />

                <RadioGroup
                    android:id="@+id/rgType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dis_50"
                    android:checkedButton="@+id/rb_member"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rb_member"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/regit_radio_selector"
                        android:padding="5dp"
                        android:text="会员"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rb_seller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dis_30"
                        android:button="@drawable/regit_radio_selector"
                        android:padding="5dp"
                        android:text="商家"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RadioGroup>
            </LinearLayout>

            <View style="@style/view_hor_margin_line" />

            <LinearLayout style="@style/lay_ct_input" >

                <TextView
                    style="@style/lay_ct_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/regit_uer_nickname" />

                <EditText
                    android:id="@+id/etUserName"
                    style="@style/lay_ct_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#999999"
                    android:layout_marginLeft="@dimen/dis_50"
                    android:background="@android:color/transparent"
                    android:hint="@string/regit_uer_nickname_tip"
                    android:singleLine="true" />
            </LinearLayout>

            <View style="@style/view_hor_margin_line" />

            <LinearLayout style="@style/lay_ct_input" >

                <TextView
                    style="@style/lay_ct_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/regit_set_password" />

                <EditText
                    android:id="@+id/etPWD"
                    style="@style/lay_ct_text_input"
                    android:textColorHint="#999999"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dis_50"
                    android:background="@android:color/transparent"
                    android:hint="@string/regit_set_password_tip"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </LinearLayout>

            <View style="@style/view_hor_margin_line" />

            <LinearLayout style="@style/lay_ct_input" >

                <TextView
                    style="@style/lay_ct_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/regit_email" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/lay_ct_text_input"
                    android:textColorHint="#999999"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dis_50"
                    android:background="@android:color/transparent"
                    android:hint="@string/regit_email_tip"
                    android:singleLine="true" />
            </LinearLayout>

            <View style="@style/view_hor_margin_line" />

            <LinearLayout style="@style/lay_ct_input"
                android:visibility="gone">

                <TextView
                    style="@style/lay_ct_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/regit_region" />

                <TextView
                    android:id="@+id/etArea"
                    style="@style/lay_ct_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dis_50"
                    android:textColorHint="#999999"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/regit_region_tip"
                    android:singleLine="true"/>
            </LinearLayout>

            <View style="@style/view_hor_match_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dis_30" >

            <Button
                android:id="@+id/btn_finish"
                style="@style/button_height_80"
                android:layout_width="match_parent"
                android:background="@drawable/btn_selector"
                android:text="@string/regit_finish"
                android:textColor="@color/title_text"
                android:textSize="@dimen/login_button_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>