<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/top_titile_style" >

        <Button
            android:id="@+id/backMain"
            style="@style/top_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/back_arrow_white"
            android:drawablePadding="3dp"
            android:text="@string/app_back" />

        <TextView
            android:id="@+id/title"
            style="@style/top_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_regist" />

        <Button
            android:id="@+id/btn_skip"
            style="@style/top_title_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="跳过" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dis_20"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <View style="@style/view_hor_match_line" />

            <LinearLayout style="@style/lay_ct_input" >

                <TextView
                    style="@style/lay_ct_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"

                    android:text="@string/user_txt_mobile" />

                <EditText
                    android:id="@+id/phoneNub"
                    style="@style/lay_ct_text_input"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dis_50"
                    android:background="@android:color/transparent"
                    android:textColorHint="#999999"
                    android:hint="@string/hint_input_mobile_tip"
                    android:inputType="number"
                    android:maxLength="11"
                    android:singleLine="true" />
            </LinearLayout>

            <View style="@style/view_hor_margin_line" />

            <RelativeLayout style="@style/lay_ct_input" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/btn_verify_code" >

                    <TextView
                        style="@style/lay_ct_text_input"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/user_verify_code" />

                    <EditText
                        android:id="@+id/verifyCodeET"
                        style="@style/lay_ct_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dis_50"
                        android:textSize="15dp"
                        android:textColorHint="#999999"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_input_code_tip"
                        android:inputType="number"
                        android:maxLength="4" />
                </LinearLayout>

                <Button
                    android:id="@+id/verifyCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:text="@string/txt_get_verify_code"
                    android:textColor="#2a60c0" />
            </RelativeLayout>

            <View style="@style/view_hor_match_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dis_30" >

            <Button
                android:id="@+id/btn_next"
                style="@style/button_height_80"
                android:layout_width="match_parent"
                android:background="@drawable/btn_selector"
                android:text="@string/user_reg_next"
                android:textColor="@color/title_text"
                android:textSize="@dimen/login_button_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dis_30"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regit_warm_pre"
                    android:textColor="@color/txt_color"
                    android:textSize="10sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/regit_warm_sub"
                    android:textColor="#2a60c0"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>