<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/top_titile_style" >

        <Button
            android:id="@+id/btn_cancel"
            style="@style/top_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@android:color/transparent"
            android:text="@string/app_cancel" />

        <TextView
            android:id="@+id/title"
            style="@style/top_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_introd" />

        <Button
            android:id="@+id/btn_save"
            style="@style/top_title_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/app_save" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_back"
        android:orientation="vertical"
        android:paddingTop="@dimen/dis_20" >

        <View style="@style/view_hor_match_line" />

        <EditText
            android:id="@+id/userIntrod"
            android:layout_width="match_parent"
            android:layout_height="130dip"
            android:background="@color/white"
            android:gravity="left|top"
            android:hint="@string/hint_input_personal_introd_tip"
            android:paddingLeft="@dimen/dis_30"
            android:paddingTop="@dimen/dis_30"
            android:textSize="@dimen/et_txt_size" />

        <View style="@style/view_hor_match_line" />
    </LinearLayout>

</LinearLayout>